--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -31,7 +31,7 @@
             <div class="img">
                 <img src="../../assets/portfolio/manage/image-portfolio-manage.jpg" alt="portifólio manage">
             </div>
-            <div class="texto texto-direita">
+            <div class="texto">
                 <div class="texto-portifolio">
                     <p class="titulo">manage</p>
                     <p class=descricao>Esse projeto me fez criar uma landing page responsiza de acordo com o design que
@@ -46,7 +46,7 @@
             <div class="img">
                 <img src="../../assets/portfolio/bookmark/image-portfolio-bookmark.jpg" alt="portifólio bookmark">
             </div>
-            <div class="texto texto-esquerda">
+            <div class="texto">
                 <div class="texto-portifolio">
                     <p class="titulo">Bookmark</p>
                     <p class=descricao>Esse projeto me fez criar uma landing page responsiza de acordo com o design que
@@ -61,7 +61,7 @@
             <div class="img">
                 <img src="../../assets/portfolio/insure/image-portfolio-insure.jpg" alt="portifólio manage">
             </div>
-            <div class="texto texto-direita">
+            <div class="texto">
                 <div class="texto-portifolio">
                     <p class="titulo">Insure</p>
                     <p class=descricao>Este foi um projeto pequeno que consistiu em HTML e CSS principalmente. Eu
@@ -77,7 +77,7 @@
             <div class="direita">
                 <img src="../../assets/portfolio/fylo/image-portfolio-fylo.jpg" alt="portifólio manage">
             </div>
-            <div class="texto texto-esquerda">
+            <div class="texto">
                 <div class="texto-portifolio">
                     <p class="titulo">Fylo</p>
                     <p class=descricao>Este projeto foi puramente HTML e CSS. Eu recebi designs mobile e desktop para
