--- a/pages/portfolio/index.html
+++ b/pages/portfolio/index.html
@@ -11,6 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/color.css">
+    <link rel="stylesheet" href="../../css/custom.css">
     <link rel="stylesheet" href="style.css">
     <title>Portifolio</title>
 </head>
@@ -18,106 +20,86 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <img src="../../assets/logo-dark.svg" alt="Logo">
+            <div class="img-header">
+                <img src="../../assets/logo-dark.svg" alt="">
             </div>
             <nav>
                 <a href="../home/index.html">home</a>
-                <a href="../portfolio/index.html">portfolio</a>
+                <a href="../portfolio/index.html">portifólio</a>
                 <a href="../contato/index.html">contato</a>
             </nav>
         </header>
-        <div class="portifolio">
-            <div class="img">
-                <img src="../../assets/portfolio/manage/image-portfolio-manage.jpg" alt="portifólio manage">
+        <section class="portifolio">
+            <div class="portifolio-img">
+                <img src="../../assets/portfolio/manage/image-portfolio-manage.jpg" alt="manage">
             </div>
-            <div class="texto">
-                <div class="texto-portifolio">
-                    <p class="titulo">manage</p>
-                    <p class=descricao>Esse projeto me fez criar uma landing page responsiza de acordo com o design que
-                        recebi.
-                        Usei HTML5, CSS Grid e JavaScript para as áreas interativas, como o slider de testimoniais.</p>
-                    <a href="../portfolio-01-manage/index.html"><button class="btn-contact" type="button">VER
-                            PROJETO</button></a>
-                </div>
+            <div class="text">
+                <h2>Manage</h2>
+                <p class="body1">Esse projeto me fez criar uma landing page responsiza de acordo com o design que
+                    recebi.
+                    Usei HTML5, CSS Grid e JavaScript para as áreas interativas, como o slider de testimoniais.</p>
+                <a class="btn-contato" href="../portfolio-01-manage/index.html">VER PROJETO</a>
             </div>
-        </div>
-        <div class="portifolio inverso">
-            <div class="img">
-                <img src="../../assets/portfolio/bookmark/image-portfolio-bookmark.jpg" alt="portifólio bookmark">
+        </section>
+        <section class="portifolio invertido">
+            <div class="portifolio-img">
+                <img src="../../assets/portfolio/bookmark/image-portfolio-bookmark.jpg" alt="bookmark">
             </div>
-            <div class="texto">
-                <div class="texto-portifolio">
-                    <p class="titulo">Bookmark</p>
-                    <p class=descricao>Esse projeto me fez criar uma landing page responsiza de acordo com o design que
-                        recebi. Usei HTML5, CSS Grid e JavaScript para as áreas interativas, como a área de Features.
-                    </p>
-                    <a href="../portfolio-02-bookmark/index.html"><button class="btn-contact" type="button">VER
-                            PROJETO</button></a>
-                </div>
+            <div class="text">
+                <h2>Booknark</h2>
+                <p class="body1">Esse projeto me fez criar uma landing page responsiza de acordo com o design que
+                    recebi. Usei HTML5, CSS Grid e JavaScript para as áreas interativas, como a área de Features.</p>
+                <a class="btn-contato" href="../portfolio-02-bookmark/index.html">VER PROJETO</a>
             </div>
-        </div>
-        <div class="portifolio">
-            <div class="img">
-                <img src="../../assets/portfolio/insure/image-portfolio-insure.jpg" alt="portifólio manage">
+        </section>
+        <section class="portifolio">
+            <div class="portifolio-img">
+                <img src="../../assets/portfolio/insure/image-portfolio-insure.jpg" alt="Insure">
             </div>
-            <div class="texto">
-                <div class="texto-portifolio">
-                    <p class="titulo">Insure</p>
-                    <p class=descricao>Este foi um projeto pequeno que consistiu em HTML e CSS principalmente. Eu
-                        construí
-                        uma landing page totalmente responsiva. O único JavaScript que usei foi para o menu de navegação
-                        mobile.</p>
-                    <a href="../portfolio-03-insure/index.html"><button class="btn-contact" type="button">VER
-                            PROJETO</button></a>
-                </div>
-            </div>
-        </div>
-        <div class="portifolio inverso">
-            <div class="direita">
-                <img src="../../assets/portfolio/fylo/image-portfolio-fylo.jpg" alt="portifólio manage">
-            </div>
-            <div class="texto">
-                <div class="texto-portifolio">
-                    <p class="titulo">Fylo</p>
-                    <p class=descricao>Este projeto foi puramente HTML e CSS. Eu recebi designs mobile e desktop para
-                        construir, então ele foi totalmente responsivo. Eu tomei um caminho mobile-first e usei CSS
-                        moderno como Flexbox e Grid para criar o layout.</p>
-                    <a href="../portfolio-04-fylo/index.html"><button class="btn-contact" type="button">VER
-                            PROJETO</button></a>
-                </div>
-            </div>
-        </div>
-        <footer>
-            <div class="contact">
-                <p>
-                    Interessado em fazer projetos comigo?
+            <div class="text">
+                <h2>Insure</h2>
+                <p class="body1">Este foi um projeto pequeno que consistiu em HTML e CSS principalmente. Eu construí uma
+                    landing page totalmente responsiva. O único JavaScript que usei foi para o menu de navegação mobile.
                 </p>
-                <a href="../contato/index.html">
-                    <button class="btn-contact">
-                        CONTATO
-                    </button>
-                </a>
+                <a class="btn-contato" href="../portfolio-03-insure/index.html">VER PROJETO</a>
             </div>
+        </section>
+        <section class="portifolio invertido">
+            <div class="portifolio-img">
+                <img src="../../assets/portfolio/fylo/image-portfolio-fylo.jpg" alt="Fylo">
+            </div>
+            <div class="text">
+                <h2>Fylo</h2>
+                <p class="body1">Este projeto foi puramente HTML e CSS. Eu recebi designs mobile e desktop para
+                    construir, então ele foi totalmente responsivo. Eu tomei um caminho mobile-first e usei CSS moderno
+                    como Flexbox e Grid para criar o layout.
+                </p>
+                <a class="btn-contato" href="../portfolio-03-insure/index.html">VER PROJETO</a>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-text-contato">
+                <h2>Interessado em fazer projetos comigo?</h2>
+            </div>
+            <a class="btn-contato" href="../contato/index.html">CONTATO</a>
         </footer>
     </div>
-    <div class="footer">
-        <div>
-            <div class="img-footer">
-                <img src="../../assets/logo-light.svg" alt="logo">
-                <nav>
-                    <a href="../home/index.html">home</a>
-                    <a href="../portfolio/index.html">portfolio</a>
-                    <a href="../contato/index.html">contato</a>
-                </nav>
-            </div>
-            <div class="social">
-                <img src="../../assets/icons/github-light.svg" alt="github">
-                <img src="../../assets/icons/linkedin-light.svg" alt="linkedin">
-                <img src="../../assets/icons/twitter-light.svg" alt="twitter">
-            </div>
+    <div class="footer grayish">
+        <div class="img-header">
+            <img src="../../assets/logo-light.svg" alt="">
+            <nav>
+                <a href="../home/index.html">home</a>
+                <a href="../portfolio/index.html">portifólio</a>
+                <a href="../contato/index.html">contato</a>
+            </nav>
         </div>
-    </div>
+        <div class="social">
+            <a href="https://github.com/sergiofisio"><img src="../../assets/icons/github-light.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/sergio-bastos-jr/"><img src="../../assets/icons/linkedin-light.svg"
+                    alt="Linkedin"></a>
+            <a href="https://twitter.com/sergiomicrosp"><img src="../../assets/icons/twitter-light.svg"
+                    alt="Twitter"></a>
+        </div>
 </body>
 
 </html>
