--- a/pages/portfolio-02-bookmark/index.html
+++ b/pages/portfolio-02-bookmark/index.html
@@ -11,116 +11,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/global.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../css/color.css">
+    <link rel="stylesheet" href="../../css/custom.css">
     <link rel="stylesheet" href="../../css/pages.css">
-    <title>Bookmark</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Insure</title>
 </head>
 
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <img src="../../assets/logo-dark.svg" alt="Logo">
+            <div class="img-header">
+                <img src="../../assets/logo-dark.svg" alt="">
             </div>
             <nav>
                 <a href="../home/index.html">home</a>
-                <a href="../portfolio/index.html">portfolio</a>
+                <a href="../portfolio/index.html">portifólio</a>
                 <a href="../contato/index.html">contato</a>
             </nav>
         </header>
-        <div class="img-titulo">
-            <img src="../../assets/portfolio//bookmark/image-bookmark-hero.jpg" alt="image hero">
-        </div>
-        <div class="projeto">
-            <div class="titulo-projeto">
-                <p>Projeto</p>
+        <main>
+        </main>
+        <section>
+            <div class="text">
+                <h2>Insure</h2>
+                <p class="body1">Esse projeto me fez criar uma landing page responsiza de acordo com o design que
+                    recebi. Usei HTML5, CSS Grid e JavaScript para as áreas interativas, como a área de Features.</p>
+                <p class="text-green">Interaction Design / Front End Development</p>
+                <p class="text-green">HTML / CSS / JS</p>
+                <a class="btn-contato" href="#">VISITAR</a>
             </div>
-            <div class="conteudo">
-                <div class="direita">
-                    <p class="titulo-conteudo">
-                        Bookmark
-                    </p>
-                    <p class="texto-direita">
-                        Esse projeto me fez criar uma landing page responsiza de acordo com o design que recebi. Usei
-                        HTML5, CSS Grid e JavaScript para as áreas interativas, como a área de Features.
-                    </p>
-                    <p class="texto-verde">
-                        Interaction Design / Front End Development
-                    </p>
-                    <p class="texto-verde">
-                        HTML / CSS / JS
-                    </p>
-                    <a href="#"><button type="button">VISITAR</button></a>
-                </div>
-                <div class="esquerda">
-                    <div class="texto-esquerda">
-                        Este projeto foi um desafio de front-end do Frontend Mentor. É uma plataforma que te faz
-                        práticar construindo websites a partir de um design e casos de usuário. Cada desafio contém
-                        designs mobile e desktop para ilustrar como o website seria em diferentes tamanhos de tela.
-                        Criar esses projetos me ajudou a refinar meu fluxo de trabalho e resolver problemas de código da
-                        vida real. Eu aprendi algo novo com cada projeto, me ajudando a melhorar e adaptar meu estilo.
-                    </div>
-                    <div class="preview">
-                        <p class="titulo-preview">
-                            Previews Estáticos
-                        </p>
-                        <img src="../../assets/portfolio/bookmark/image-bookmark-preview-1.jpg" alt="preview">
-                        <img src="../../assets/portfolio/bookmark/image-bookmark-preview-2.jpg" alt="preview">
+            <div class="preview">
+                <h3>Projeto</h3>
+                <p class="body2">Este projeto foi um desafio de front-end do Frontend Mentor. É uma plataforma que te
+                    faz práticar construindo websites a partir de um design e casos de usuário. Cada desafio contém
+                    designs mobile e desktop para ilustrar como o website seria em diferentes tamanhos de tela. Criar
+                    esses projetos me ajudou a refinar meu fluxo de trabalho e resolver problemas de código da vida
+                    real. Eu aprendi algo novo com cada projeto, me ajudando a melhorar e adaptar meu estilo.</p>
+                <h3>Previews Estáticos</h3>
+                <img src="../../assets/portfolio/bookmark/image-bookmark-preview-1.jpg" alt="">
+                <img src="../../assets/portfolio/bookmark/image-bookmark-preview-2.jpg" alt="">
+            </div>
+        </section>
+        <div class="transition">
+            <a class="btn-left" href="../portfolio-01-manage/index.html">
+                <div class="left">
+                    <img class="img-left" src="../../assets/icons/arrow-left.svg" alt="">
+                    <div class="before">
+                        <h3>Manage</h3>
+                        <p class="body1">Projeto Anterior</p>
                     </div>
                 </div>
-            </div>
-            <div class="transicao">
-                <a href="../portfolio-01-manage/index.html">
-                    <div class="transicao-esquerda">
-                        <img src="../../assets/icons/arrow-left.svg" alt="seta esquerda">
-                        <div class=transicao-proximo>
-                            <p class="proximo">Manage</p>
-                            <p class="proximo-projeto">Projeto Anterior</p>
-                        </div>
+            </a>
+            <a class="btn-left" href="../portfolio-03-insure/index.html">
+                <div class="right">
+                    <div class=after>
+                        <h3>Insure</h3>
+                        <p class="body1">Próximo Projeto</p>
                     </div>
-                </a>
-                <a href="../portfolio-03-insure/index.html">
-                    <div class="transicao-direita">
-                        <img src="../../assets/icons/arrow-right.svg" alt="seta direita">
-                        <div class=transicao-proximo>
-                            <p class="proximo">Insure</p>
-                            <p class="proximo-projeto">Próximo Projeto</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
+                    <img class="img-right" src="../../assets/icons/arrow-right.svg" alt="">
+                </div>
+            </a>
         </div>
-
         <footer>
-            <div class="contact">
-                <p>
-                    Interessado em fazer projetos comigo?
-                </p>
-                <a href="../contato/index.html">
-                    <button class="btn-contact">
-                        CONTATO
-                    </button>
-                </a>
+            <div class="footer-text-contato">
+                <h2>Interessado em fazer projetos comigo?</h2>
             </div>
+            <a class="btn-contato" href="../contato/index.html">CONTATO</a>
         </footer>
     </div>
-    <div class="footer">
-        <div>
-            <div class="img-footer">
-                <img src="../../assets/logo-light.svg" alt="logo">
-                <nav>
-                    <a href="../home/index.html">home</a>
-                    <a href="../portfolio/index.html">portfolio</a>
-                    <a href="../contato/index.html">contato</a>
-                </nav>
-            </div>
-            <div class="social">
-                <img src="../../assets/icons/github-light.svg" alt="github">
-                <img src="../../assets/icons/linkedin-light.svg" alt="linkedin">
-                <img src="../../assets/icons/twitter-light.svg" alt="twitter">
-            </div>
+    <div class="footer grayish">
+        <div class="img-header">
+            <img src="../../assets/logo-light.svg" alt="">
+            <nav>
+                <a href="../home/index.html">home</a>
+                <a href="../portfolio/index.html">portifólio</a>
+                <a href="../contato/index.html">contato</a>
+            </nav>
         </div>
-    </div>
+        <div class="social">
+            <a href="https://github.com/sergiofisio"><img src="../../assets/icons/github-light.svg" alt="GitHub"></a>
+            <a href="https://www.linkedin.com/in/sergio-bastos-jr/"><img src="../../assets/icons/linkedin-light.svg"
+                    alt="Linkedin"></a>
+            <a href="https://twitter.com/sergiomicrosp"><img src="../../assets/icons/twitter-light.svg"
+                    alt="Twitter"></a>
+        </div>
 </body>
 
 </html>
